// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolveStyles should add note without children an empty text instance 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "TEXT_INSTANCE",
                  "value": "",
                },
              ],
              "type": "NOTE",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles should concatenate several note children into one 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "TEXT_INSTANCE",
                  "value": "React freakin pdf ftw",
                },
              ],
              "type": "NOTE",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles should concatenate two note text instance children into one 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "TEXT_INSTANCE",
                  "value": "React-pdf",
                },
              ],
              "type": "NOTE",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles should leave non note children as they are 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "TEXT",
                },
              ],
              "type": "VIEW",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles should leave note single note text instance children as it is 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "TEXT_INSTANCE",
                  "value": "React",
                },
              ],
              "type": "NOTE",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;
